--- a/P010530.opf/layers/v001/Pagination.yml
+++ b/P010530.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b58561c70aa341388f29cdf2024ff3d3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a4d8468237704351a1bf52e859994cc5:
