--- a/P010530.opf/meta.yml
+++ b/P010530.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010530
 initial_creation_type: ocr
+created_at: 28/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG5397
   title: བྱ་མགྲིན་སྔོན་ཟླ་བའི་རྟོགས་བརྗོད་
